@@ -9,7 +9,7 @@ Authors@R: person("Mark", "van der Loo",
         role=c("aut","cre"),email="mark.vanderloo@gmail.com")
 Description: A function composition ('pipe') operator and extensible
         framework that allows for easy logging of changes in data.
-Version: 0.3.0.1
+Version: 0.3.0.2
 URL: https://github.com/markvanderloo/lumberjack
 BugReports: https://github.com/markvanderloo/lumberjack/issues
 Imports: utils, R6
