@@ -1,8 +1,8 @@
 - more consistent naming: 'logger' vs 'log'
-- detailed control over dumping: add_logger vs start_logger
-- 'dir' argument for dump_log (with getOption("lbj_logdir","./") a default)
-- dump to 'dir/dataset_loggername'
+- ?'dir' argument for dump_log (with getOption("lbj_logdir","./") a default)
+- dump to 'dataset_loggername' -> changes exstensibility api
 - verbosity level for run(?)
 - pause/resume?
-- multiple datasets with multiple loggers for '%L>%'
+- logger verbosity as lbj.verbose option?
+
 
