@@ -1,4 +1,6 @@
 version 0.4.0
+- Track changes without the pipe operator, using 'run'
+- Support for multiple loggers
 - Switched to 'tinytest' testing framework
 
 version 0.3.0
